fix table overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,32 +174,39 @@ h1 {
     text-align: center;
     color: var(--orange-yellow-crayola);
 }
+
 table {
     width: 100%;
     border-collapse: collapse;
     margin: 20px 0;
 }
+
 th, td {
     padding: 12px 15px;
     text-align: left;
     border-bottom: 1px solid #444;
 }
+
 th {
     background-color: #333;
     color: var(--orange-yellow-crayola);
 }
+
 tr:nth-child(even) {
     background-color: #2e2e2e;
 }
+
 tr:hover {
     background-color: #444;
     cursor: pointer;
 }
+
 td.rank {
     text-align: center;
     font-weight: bold;
     color: var(--orange-yellow-crayola);
 }
+
 td:nth-child(1), td:nth-child(2), td:nth-child(3) {
     color: #fff;
 }
@@ -1077,6 +1084,7 @@ main {
 
 .project-item {
     display: none;
+    overflow-x: auto;
 }
 
 .project-item.active {
